# pytest-experiments

./: .coveragerc  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENSE  README.rst  dev_requirements.txt  document.sh  format.sh  pyproject.toml  setup.py  tox.ini
demo/: README.rst  experiments.db  my_algorithm.py  test_algorithm.py
docs/: conf.py  index.rst
docs/source/: demo.rst  modules.rst  my_algorithm.rst  pytest_experiments.common.rst  pytest_experiments.config.rst  pytest_experiments.experiment.rst  pytest_experiments.fixtures.rst  pytest_experiments.json_tools.rst  pytest_experiments.rst  pytest_experiments.serde.rst  pytest_experiments.store.rst  test_algorithm.rst
src/pytest_experiments/: common.py  config.py  experiment.py  fixtures.py  json_tools.py  serde.py  store.py
tests/: test_common.py  test_experiments.py  test_json_tools.py  test_serde.py
