[tool.poetry]
name = "pytest-experiments"
version = "0.1.0"
description = "A pytest plugin to help developers of research-oriented software projects keep track of the results of their numerical experiments."
authors = ["Matt Battifarano <matthew.battifarano@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/mbattifarano/pytest-experiments"
homepage = "https://pytest-experiments.readthedocs.io/en/latest/"
classifiers = [
    'Development Status :: 4 - Beta',
    'Framework :: Pytest',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Testing',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Operating System :: OS Independent',
    'License :: OSI Approved :: MIT License',
]

[tool.poetry.plugins."pytest11"]
experiments = "pytest_experiments.fixtures"

[tool.poetry.dependencies]
python = "^3.6.2"
pytest = "^6.2.5"
SQLAlchemy = "^1.4.28"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
Sphinx = "^4.3.1"
pytest-coverage = "^0.0"
prospector = "^1.5.3"
pre-commit = "^2.16.0"
numpy = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov"

[tool.black]
line-length = 79
extend-exclude = '\..*/'